route view/username
