# models/models.go
@@ -14,3 +14,12 @@ type User struct {
 	CreatedOn  string        `json:"createdOn"`
 	ModifiedBy sql.NullInt64 `json:"modifiedBy"`
 }
+
+type UserResponse struct {
+	Firstname string `json:"firstname"`
+	Lastname  string `json:"lastname"`
+	Username  string `json:"username"`
+	Role      string `json:"role"`
+	IsActive  bool   `json:"isActive"`
+	CreatedOn string `json:"createdOn"`
+}
